2004-08-28  Remi Denis-Courmont

	* src/privproc.cpp:
	- fixed nasty memcpy instead of memcmp typing error,
	- cleaned up.
	* libteredo/relay.cpp:
	- initial support for Teredo client qualification.

2004-08-27  Remi Denis-Courmont

	* libteredo/teredo-udp.*:
	- replaced thread-unsafe by design TeredoCommonUDP class,
	  with TeredoPacket: Smaller memory footprint,
	  libteredo nearly thread-safe.

2004-08-25  Remi Denis-Courmont

	* libterdo/relay.cpp, configure.ac, src/Makefile.am:
	- use OpenSSL to sets the authentication nonce,
	* libteredo/relay.*, src/relay.*, src/main.cpp, src/miredo.*:
	- only specify one server name for client, much less confusing,
	* libtun6/ipv6-tunnel.cpp:
	- use writev()/readv() to avoid using memcpy(),
	- fixes SendPacket's return value.

2004-08-24  Remi Denis-Courmont

	* src/main.c:
	- option to enable cone relay optimization;
	Miredo will now assume restricted relay by default,
	- command line support for client mode,
	- verbose option for the command line,
	* README, NEWS, miredo.8:
	- reflect above command line change,
	* src/miredo.*:
	- checks validity of Teredo prefix before using it,
	* src/miredo.*, src/relay.*, libteredo/relay.*:
	- support for creating a Teredo client instance,
	* libteredo/teredu-udp.cpp:
	- simpler parsing of incoming Teredo packets.

2004-08-22  Remi Denis-Courmont

	* libteredo/relay.*:
	- support for relay behind restricted NAT,
	- partial support for client packet transmission.

2004-08-18  Remi Denis-Courmont

	* src/miredo.cpp, src/privproc.*:
	- fixed privileged process.

2004-08-17  Remi Denis-Courmont

	* libtun6/ipv6-tunnel.*:
	- libtun6 made thread-safe
	* libteredo/relay.*:
	- removed ReceiveIPv6Packet callback (one step toward
	re-entrancy and thread-safety),
	- tunnel addresses changes implemented
	* src/miredo.cpp, src/relay.*:
	- implemented a privileged process to set up tunnel addresses.

2004-07-31  Remi Denis-Courmont

	* libteredo/*, src/*: