@@ -1,5 +1,5 @@
 # Makefile.am - libteredo/ directory Makefile for miredo
-# $Id: Makefile.am,v 1.1 2004/07/22 17:38:29 rdenisc Exp $
+# $Id: Makefile.am,v 1.2 2004/08/28 13:49:53 rdenisc Exp $
 
 # ***********************************************************************
 # *  Copyright (C) 2004 Remi Denis-Courmont.                            *
@@ -25,5 +25,6 @@ libteredo_a_SOURCES =	teredo.c teredo.h \
 			v4global.c v4global.h \
 			teredo-udp.cpp teredo-udp.h \
 			relay.cpp relay.h \
+			relay-packets.cpp relay-packets.h \
 			server.cpp server.h
 
