@@ -1,6 +1,6 @@
 /*
  * relay.cpp - Teredo relay peers list definition
- * $Id: relay.cpp,v 1.31 2004/08/28 12:29:51 rdenisc Exp $
+ * $Id: relay.cpp,v 1.32 2004/08/28 13:49:53 rdenisc Exp $
  *
  * See "Teredo: Tunneling IPv6 over UDP through NATs"
  * for more information
@@ -34,238 +34,16 @@
 #include <sys/time.h>
 #include <netinet/in.h>
 #include <netinet/ip6.h> // struct ip6_hdr
-#include <netinet/icmp6.h> // router solicication
 #include <syslog.h>
-
-#ifdef USE_OPENSSL
-# include <openssl/rand.h>
-# include <openssl/err.h>
-#endif
 
 #include "teredo.h"
 #include <v4global.h> // is_ipv4_global_unicast()
 #include "teredo-udp.h"
 
+#include "relay-packets.h"
 #include "relay.h"
 
 #define TEREDO_TIMEOUT 30 // seconds
-
-/*
- * Sends a Teredo Bubble to the server specified in Teredo address <dst>.
- * Returns 0 on success, -1 on error.
- */
-static int 
-SendBubble (const TeredoRelayUDP& sock, const struct in6_addr *d,
-		bool cone, bool indirect = true)
-{
-	uint32_t ip;
-	uint16_t port;
-	const union teredo_addr *dst = (const union teredo_addr *)d;
-
-	if (indirect)
-	{
-		ip = dst->teredo.server_ip;
-		port = htons (IPPORT_TEREDO);
-	}
-	else
-	{
-		ip = ~dst->teredo.client_ip;
-		port = ~dst->teredo.client_port;
-	}
-
-	if (ip && is_ipv4_global_unicast (ip))
-	{
-		struct ip6_hdr hdr;
-
-		hdr.ip6_flow = htonl (0x60000000);
-		hdr.ip6_plen = 0;
-		hdr.ip6_nxt = IPPROTO_NONE;
-		hdr.ip6_hlim = 255;
-		memcpy (&hdr.ip6_src, cone ? &teredo_cone : &teredo_restrict,
-				sizeof (hdr.ip6_src));
-		memcpy (&hdr.ip6_dst, &dst->ip6, sizeof (hdr.ip6_dst));
-
-		return sock.SendPacket (&hdr, sizeof (hdr), ip, port);
-	}
-
-	return 0;
-}
-
-/*
- * Sends a router solication with an Authentication header to the server.
- * If secondary is true, the packet will be sent to the server's secondary
- * IPv4 adress instead of the primary one.
- *
- * Returns 0 on success, -1 on error.
- */
-static const struct in6_addr in6addr_allrouters =
-        { { { 0xff, 0x02, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0x2 } } };
-
-static int 
-SendRS (const TeredoRelayUDP& sock, uint32_t server_ip, unsigned char *nonce,
-	bool cone, bool secondary)
-{
-	uint8_t packet[13 + sizeof (struct ip6_hdr)
-			+ sizeof (struct nd_router_solicit)
-			+ sizeof (nd_opt_hdr) + 14],
-                *ptr = packet;
-
-	// Authentication header
-	// TODO: secure qualification
-	{
-		struct teredo_simple_auth *auth;
-
-		auth = (struct teredo_simple_auth *)ptr;
-		auth->hdr.hdr.zero = 0;
-		auth->hdr.hdr.code = teredo_auth_hdr;
-		auth->hdr.id_len = auth->hdr.au_len = 0;
-#ifdef USE_OPENSSL
-		if (!RAND_pseudo_bytes (nonce, 8))
-		{
-			char buf[120];
-
-			syslog (LOG_WARNING, _("Possibly predictable RS: %s"),
-				ERR_error_string (ERR_get_error (), buf));
-		}
-#else
-		memset (nonce, 0, 8);
-#endif
-		memcpy (&auth->nonce, nonce, 8);
-		auth->confirmation = 0;
-
-		ptr += 13;
-	}
-
-	{
-		struct
-		{
-			struct ip6_hdr ip6;
-			struct nd_router_solicit rs;
-			struct nd_opt_hdr opt;
-			uint8_t lladdr[14];
-		} rs;
-
-		rs.ip6.ip6_flow = htonl (0x60000000);
-		rs.ip6.ip6_plen = htons (sizeof (rs));
-		rs.ip6.ip6_nxt = IPPROTO_ICMPV6;
-		rs.ip6.ip6_hlim = 255;
-		memcpy (&rs.ip6.ip6_src, cone
-			? &teredo_cone : &teredo_restrict,
-			sizeof (rs.ip6.ip6_src));
-		memcpy (&rs.ip6.ip6_dst, &in6addr_allrouters,
-			sizeof (rs.ip6.ip6_dst));
-	
-		rs.rs.nd_rs_type = ND_ROUTER_SOLICIT;
-		rs.rs.nd_rs_code = 0;
-		// Checksums are pre-computed
-		rs.rs.nd_rs_cksum = htons (cone ? 0x114b : 0x914b);
-		rs.rs.nd_rs_reserved = 0;
-
-		/*
-		 * Microsoft Windows XP sends a 14 byte nul
-		 * source link-layer address (this is useless) when qualifying.
-		 * Once qualified, it still sends a source link-layer address,
-		 * but it includes sort of an origin indication.
-		 * We keep it nul every time. It avoids having to compute the
-		 * checksum and it is not specified.
-		 */
-		rs.opt.nd_opt_type = ND_OPT_SOURCE_LINKADDR;
-		rs.opt.nd_opt_len = 2; // 16 bytes
-
-		memset (rs.lladdr, 0, sizeof (rs.lladdr));
-
-		memcpy (ptr, &rs, sizeof (rs));
-	}
-
-	if (secondary)
-		server_ip = htonl (ntohl (server_ip) + 1);
-
-	return sock.SendPacket (packet, sizeof (packet), server_ip,
-				htons (IPPORT_TEREDO));
-}
-
-
-/*
- * Validates a router advertisement from the Teredo server.
- * The RA must be of type cone if and only if cone is true.
- * Prefix, flags, mapped port and IP are returned through newaddr.
- *
- * Assumptions:
- * - newaddr must be 4-bytes aligned.
- * - newaddr->teredo.server_ip must be set to the server's expected IP by the
- *   caller.
- * - IPv6 header is valid (ie. version 6, plen matches packet's length).
- */
-static bool
-ParseRA (const TeredoPacket& packet, union teredo_addr *newaddr, bool cone)
-{
-	const struct teredo_orig_ind *ind = packet.GetOrigInd ();
-	size_t length;
-
-	const struct ip6_hdr *ip6 = packet.GetIPv6Header (length);
-
-	if ((ind == NULL)
-	 || memcmp (&ip6->ip6_dst, cone ? &teredo_cone : &teredo_restrict,
-			sizeof (ip6->ip6_dst))
-	 || (ip6->ip6_nxt != IPPROTO_ICMPV6)
-	 || (length < sizeof (struct nd_router_advert)))
-		return false;
-
-	// Only read bytes, so no need to align
-	const struct nd_router_advert *ra =
-		(const struct nd_router_advert *)
-			(((uint8_t *)ip6) + sizeof (struct ip6_hdr));
-	length -= sizeof (struct nd_router_advert);
-
-	if ((ra->nd_ra_type != ND_ROUTER_ADVERT)
-	 || (ra->nd_ra_code != 0)
-	 || (length < sizeof (struct nd_opt_prefix_info)))
-	/*
-	 * We don't check checksum, because it is rather useless.
-	 * There were already (at least) two lower-level checksums.
-	 */
-		return false;
-
-	// Looks for a prefix information option
-	const struct nd_opt_prefix_info *pi =
-		(const struct nd_opt_prefix_info *)(((uint8_t *)ra)
-			+ sizeof (struct nd_router_advert));
-
-	while (pi->nd_opt_pi_type != ND_OPT_PREFIX_INFORMATION)
-	{
-		if (length < (size_t)(pi->nd_opt_pi_len << 3))
-			return 0; // too short
-		length -= pi->nd_opt_pi_len << 3;
-		if (length < sizeof (struct nd_opt_prefix_info))
-			return 0; // too short
-
-		pi = (const struct nd_opt_prefix_info *)
-			(((uint8_t *)pi) + (pi->nd_opt_pi_len << 3));
-	}
-
-	if ((pi->nd_opt_pi_len != (sizeof (struct nd_opt_prefix_info) >> 3))
-	 || (pi->nd_opt_pi_prefix_len != 64))
-		return false;
-
-	uint32_t prefix, ip;
-
-	memcpy (&prefix, &pi->nd_opt_pi_prefix, sizeof (prefix));
-	memcpy (&ip, ((uint8_t *)&pi->nd_opt_pi_prefix) + 4, sizeof (ip));
-
-	if (!is_valid_teredo_prefix (prefix)
-	 || (ip != newaddr->teredo.server_ip))
-	{
-		syslog (LOG_WARNING, _("Invalid Teredo prefix received"));
-		return false;
-	}
-
-	newaddr->teredo.prefix = prefix;
-	// only accept the cone flag:
-	newaddr->teredo.flags = cone ? htons (TEREDO_FLAG_CONE) : 0;
-	newaddr->teredo.client_port = ind->orig_port;
-	newaddr->teredo.client_ip = ind->orig_addr;
-	return true;
-}
 
 
 #define EXPIRED( date, now ) ((((unsigned)now) - (unsigned)date) > 30)
@@ -373,6 +151,7 @@ int TeredoRelay::NotifyDown (void)
  * correctly.
  *
  * FIXME: number of entry should be bound
+ * FIXME: move to another file
  */
 struct __TeredoRelay_peer *TeredoRelay::AllocatePeer (void)
 {
@@ -694,7 +473,7 @@ int TeredoRelay::ReceivePacket (const fd_set *readset)
 	{
 		// TODO: refresh interval randomisation
 		gettimeofday (&probe.serv, NULL);
-		probe.serv.tv_sec += 35;
+		probe.serv.tv_sec += SERVER_LOSS_DELAY;
 
 		const struct teredo_orig_ind *ind = packet.GetOrigInd ();
 		if (ind != NULL)
